# opencode-codebase-index

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TROUBLESHOOTING.md  eslint.config.js  package-lock.json  package.json  test-native.cjs  test-native.mjs  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release-drafter.yml
benchmarks/: run.ts
commands/: find.md  index.md  search.md  status.md  visualize.md
docs/: adding-language-support.md
native/: Cargo.toml  package.json
native/queries/: apex-calls.scm  bash-calls.scm  c-calls.scm  cpp-calls.scm  gdscript-calls.scm  go-calls.scm  javascript-calls.scm  metal-calls.scm  php-calls.scm  python-calls.scm  rust-calls.scm  swift-calls.scm  typescript-calls.scm  zig-calls.scm
native/src/: call_extractor.rs  chunker.rs  community.rs  db.rs  hasher.rs  inverted_index.rs  lib.rs  parser.rs  store.rs  types.rs
scripts/: benchmark.sh  benchmark.ts  cross-repo-benchmark.ts  eval-mock-embeddings-server.mjs  link-local-mcp-bin.mjs
skill/: SKILL.md
skills/codebase-search/: SKILL.md
src/: cli.ts  index.ts  mcp-server.ts  pi-extension.ts  routing-hints-patterns.ts  routing-hints.ts
src/commands/: loader.ts
tests/: auto-gc.test.ts  auto-index.test.ts  call-graph.test.ts  changed-files.test.ts  claude-plugin.test.ts  cli.test.ts  codex-plugin.test.ts  commands.test.ts  config.test.ts  cost.test.ts  crash-recovery.test.ts  custom-provider.test.ts  database.test.ts  embeddings.test.ts  eval-runner.test.ts  files.test.ts  git.test.ts  host-mode-paths.test.ts  host-paths.test.ts  index-lock.test.ts  indexer-clear-index.test.ts  indexer-failed-batches.test.ts  inverted-index.test.ts  logger.test.ts  mcp-server.test.ts  multiprocess-indexing.test.ts  native.test.ts  paths.test.ts  pi-conformance.test.ts  pi-package.test.ts  plugin-hooks.test.ts  pr-impact.test.ts  retrieval-ranking.test.ts  routing-hints.test.ts  search-integration.test.ts  tools-knowledge-bases.test.ts  tools-utils.test.ts  visualize.test.ts  watcher-config-refresh.test.ts  watcher.test.ts  (+1 more)
(+65 files in other folders)
