[package]
name = "codebase-index-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Rust core for opencode-codebase-index: tree-sitter parsing and vector search"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi9", "async", "serde-json"] }
napi-derive = "2.16"

tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-json = "0.20"

usearch = "2.15"

rusqlite = { version = "0.31", features = ["bundled"] }

xxhash-rust = { version = "0.8", features = ["xxh3"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rayon = "1.10"

walkdir = "2.5"
ignore = "0.4"

thiserror = "1.0"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.24.0"
